--- a/src/Demo/Scratch/Scratch.fsproj
+++ b/src/Demo/Scratch/Scratch.fsproj
@@ -92,6 +92,11 @@
       <Project>{0d5b3e80-26bd-4d67-a4dc-0dde84c478b6}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <ProjectReference Include="..\..\Aardvark.System.EventSource\Aardvark.System.EventSource.csproj">
+      <Name>Aardvark.System.EventSource</Name>
+      <Project>{83641455-78b0-45ea-a7ca-c79641392ed3}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
