--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -144,6 +144,11 @@
       <Project>{e0fc963c-92e2-466f-8f38-3a12b314e394}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <ProjectReference Include="..\Aardvark.System.EventSource\Aardvark.System.EventSource.csproj">
+      <Name>Aardvark.System.EventSource</Name>
+      <Project>{83641455-78b0-45ea-a7ca-c79641392ed3}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
