eliminating more Tups/Pairs/Triples

--- a/src/Aardvark.Base.Algodat/Aardvark.Base.Algodat.csproj
+++ b/src/Aardvark.Base.Algodat/Aardvark.Base.Algodat.csproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Aardvark.Base.Extensions\Aardvark.Base.Extensions.csproj" />
     <ProjectReference Include="..\Aardvark.Base.Math\Aardvark.Base.Math.csproj" />
   </ItemGroup>
 
