--- a/src/Aardvark.Base.Algodat/Aardvark.Base.Algodat.csproj
+++ b/src/Aardvark.Base.Algodat/Aardvark.Base.Algodat.csproj
@@ -9,6 +9,7 @@
     <OutputPath>..\..\bin\Debug</OutputPath>
     <DocumentationFile>..\..\bin\Debug\netstandard2.0\Aardvark.Base.Algodat.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
