moved Aardvark.Base/Algodat/XmlParser.cs to Aardvark.Base.IO/XmlParser.cs

--- a/src/Aardvark.Base.IO/Aardvark.Base.IO.csproj
+++ b/src/Aardvark.Base.IO/Aardvark.Base.IO.csproj
@@ -70,6 +70,7 @@
     <Compile Include="TypeInfoVersion.cs" />
     <Compile Include="UberStream.cs" />
     <Compile Include="WorkDir.cs" />
+    <Compile Include="XmlParser.cs" />
     <Compile Include="XmlReadingCoder.cs" />
     <Compile Include="XmlReadingCoder_auto.cs" />
     <Compile Include="XmlWritingCoder.cs" />
