--- a/src/Aardvark.Base.Tup/Aardvark.Base.Tup.csproj
+++ b/src/Aardvark.Base.Tup/Aardvark.Base.Tup.csproj
@@ -9,12 +9,14 @@
     <OutputPath>..\..\bin\Debug\netstandard2.0\</OutputPath>
     <DocumentationFile>..\..\bin\Debug\netstandard2.0\Aardvark.Base.Tup.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>..\..\bin\Release\netstandard2.0\</OutputPath>
     <DocumentationFile>..\..\bin\Release\netstandard2.0\Aardvark.Base.Tup.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
