--- a/src/Aardvark.Base.Images/Aardvark.Base.Images.csproj
+++ b/src/Aardvark.Base.Images/Aardvark.Base.Images.csproj
@@ -15,6 +15,7 @@
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="TensorExtensions_generator.cs" />
     <Compile Remove="TensorExtensions_template.cs" />
   </ItemGroup>
   <ItemGroup>
