moved more extensions from Aardvark.Base to netstandard

--- a/src/Aardvark.Base.Sorting/Aardvark.Base.Sorting.csproj
+++ b/src/Aardvark.Base.Sorting/Aardvark.Base.Sorting.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Aardvark.Base.Extensions\Aardvark.Base.Extensions.csproj" />
+    <ProjectReference Include="..\Aardvark.Base.Symbol\Aardvark.Base.Symbol.csproj" />
   </ItemGroup>
 
 </Project>
