--- a/src/Tests/Aardvark.Base.Runtime.Tests/Aardvark.Base.Runtime.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.Runtime.Tests/Aardvark.Base.Runtime.Tests.fsproj
@@ -77,44 +77,14 @@
       <Project>{692a3617-719b-4ea2-abc1-407ae20094ae}</Project>
       <Private>True</Private>
     </ProjectReference>
-    <ProjectReference Include="..\..\Aardvark.Base.Geometry\Aardvark.Base.Geometry.csproj">
-      <Name>Aardvark.Base.Geometry</Name>
-      <Project>{1f843ba4-1fee-4d4e-be32-ee9701d907e1}</Project>
-      <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Aardvark.Base.Hashing\Aardvark.Base.Hashing.csproj">
-      <Name>Aardvark.Base.Hashing</Name>
-      <Project>{8fc336ea-7de8-428f-949d-3320208a5ee5}</Project>
-      <Private>True</Private>
-    </ProjectReference>
     <ProjectReference Include="..\..\Aardvark.Base.Incremental\Aardvark.Base.Incremental.fsproj">
       <Name>Aardvark.Base.Incremental</Name>
       <Project>{9623ae28-1f72-46e9-a3a7-85fc1a321a73}</Project>
       <Private>True</Private>
     </ProjectReference>
-    <ProjectReference Include="..\..\Aardvark.Base.Introspection\Aardvark.Base.Introspection.csproj">
-      <Name>Aardvark.Base.Introspection</Name>
-      <Project>{919e549b-980d-4565-b504-2d0244d23ce6}</Project>
-      <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Aardvark.Base.Math\Aardvark.Base.Math.csproj">
-      <Name>Aardvark.Base.Math</Name>
-      <Project>{caa4e460-e04b-45a4-8501-2694e61f72c9}</Project>
-      <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Aardvark.Base.Reporting\Aardvark.Base.Reporting.csproj">
-      <Name>Aardvark.Base.Reporting</Name>
-      <Project>{f4d5431a-43a4-4fba-b352-421ec359d03c}</Project>
-      <Private>True</Private>
-    </ProjectReference>
     <ProjectReference Include="..\..\Aardvark.Base.Runtime\Aardvark.Base.Runtime.fsproj">
       <Name>Aardvark.Base.Runtime</Name>
       <Project>{04e146c2-1c4c-432f-922c-351d0f4ced67}</Project>
-      <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Aardvark.Base.Symbol\Aardvark.Base.Symbol.csproj">
-      <Name>Aardvark.Base.Symbol</Name>
-      <Project>{0d5b3e80-26bd-4d67-a4dc-0dde84c478b6}</Project>
       <Private>True</Private>
     </ProjectReference>
     <ProjectReference Include="..\..\Aardvark.Base.TypeProviders\Aardvark.Base.TypeProviders.fsproj">
@@ -518,30 +488,8 @@
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETStandard' And $(TargetFrameworkVersion) == 'v2.0'">
       <ItemGroup>
-        <Reference Include="System.Reactive.Core">
-          <HintPath>..\..\..\packages\System.Reactive.Core\lib\netstandard1.3\System.Reactive.Core.dll</HintPath>
-          <Private>True</Private>
-          <Paket>True</Paket>
-        </Reference>
-      </ItemGroup>
-    </When>
-  </Choose>
-  <Choose>
-    <When Condition="$(TargetFrameworkIdentifier) == '.NETStandard' And $(TargetFrameworkVersion) == 'v2.0'">
-      <ItemGroup>
-        <Reference Include="System.Reactive.Interfaces">
-          <HintPath>..\..\..\packages\System.Reactive.Interfaces\lib\netstandard1.0\System.Reactive.Interfaces.dll</HintPath>
-          <Private>True</Private>
-          <Paket>True</Paket>
-        </Reference>
-      </ItemGroup>
-    </When>
-  </Choose>
-  <Choose>
-    <When Condition="$(TargetFrameworkIdentifier) == '.NETStandard' And $(TargetFrameworkVersion) == 'v2.0'">
-      <ItemGroup>
-        <Reference Include="System.Reactive.Linq">
-          <HintPath>..\..\..\packages\System.Reactive.Linq\lib\netstandard1.3\System.Reactive.Linq.dll</HintPath>
+        <Reference Include="System.Reactive">
+          <HintPath>..\..\..\packages\System.Reactive\lib\netstandard1.3\System.Reactive.dll</HintPath>
           <Private>True</Private>
           <Paket>True</Paket>
         </Reference>
