build working again (package creation too)

--- a/src/Aardvark.Base.Incremental/paket.template
+++ b/src/Aardvark.Base.Incremental/paket.template
@@ -7,3 +7,4 @@ projectUrl http://github.com/aardvark-platform
 licenseUrl http://www.apache.org/licenses/LICENSE-2.0.txt
 description
     Aardvark is an open-source platform for visual computing, real-time graphics and visualization.
+include-pdbs true
