--- a/src/Aardvark.Base.FSharp/paket.template
+++ b/src/Aardvark.Base.FSharp/paket.template
@@ -7,7 +7,7 @@ licenseUrl http://www.apache.org/licenses/LICENSE-2.0.txt
 description
     Aardvark is an open-source platform for visual computing, real-time graphics and visualization.
 files
-    ..\..\bin\Release\Aardvark.Base.FSharp.dll ==> lib\net45
-    ..\..\bin\Release\Aardvark.Base.FSharp.pdb ==> lib\net45
-    ..\..\bin\Release\Aardvark.Base.TypeProviders.dll ==> lib\net45
-    ..\..\bin\Release\Aardvark.Base.TypeProviders.pdb ==> lib\net45
+    ..\..\bin\Release\netstandard2.0\Aardvark.Base.FSharp.dll ==> lib\netstandard2.0
+    ..\..\bin\Release\netstandard2.0\Aardvark.Base.FSharp.pdb ==> lib\netstandard2.0
+    ..\..\bin\Release\netstandard2.0\Aardvark.Base.TypeProviders.dll ==> lib\netstandard2.0
+    ..\..\bin\Release\netstandard2.0\Aardvark.Base.TypeProviders.pdb ==> lib\netstandard2.0
