--- a/src/Aardvark.Data.Vrml97/paket.template
+++ b/src/Aardvark.Data.Vrml97/paket.template
@@ -6,7 +6,4 @@ projectUrl http://github.com/aardvark-platform
 licenseUrl http://www.apache.org/licenses/LICENSE-2.0.txt
 description
     Aardvark is an open-source platform for visual computing, real-time graphics and visualization.
-files
-    ..\..\bin\Release\Aardvark.Data.Vrml97.dll ==> lib\net45
-    ..\..\bin\Release\Aardvark.Data.Vrml97.pdb ==> lib\net45
-    ..\..\bin\Release\Aardvark.Data.Vrml97.xml ==> lib\net45
+include-pdbs true
