TypeProviders is now a package

--- a/src/Aardvark.Base.TypeProviders/paket.template
+++ b/src/Aardvark.Base.TypeProviders/paket.template
@@ -1,5 +1,5 @@
 type project
-id Aardvark.Base.FSharp
+id Aardvark.Base.TypeProviders
 authors Aardvark Platform Team
 owners Aardvark Platform Team
 projectUrl http://github.com/aardvark-platform
