TypeProviders include FSharp.Core

--- a/src/Aardvark.Base.TypeProviders/paket.template
+++ b/src/Aardvark.Base.TypeProviders/paket.template
@@ -7,3 +7,5 @@ licenseUrl http://www.apache.org/licenses/LICENSE-2.0.txt
 description
     Aardvark is an open-source platform for visual computing, real-time graphics and visualization.
 include-pdbs true
+files
+	..\..\packages\FSharp.Core\lib\netstandard1.6\FSharp.Core.dll => lib\netstandard2.0
