paket.template: removed explicit file entries, added include-pdbs true

--- a/src/Aardvark.Base/paket.template
+++ b/src/Aardvark.Base/paket.template
@@ -9,7 +9,4 @@ description
 frameworkAssemblies
     System.Drawing
 	System.Runtime.Serialization
-files
-    ..\..\bin\Release\Aardvark.Base.dll ==> lib\net45
-    ..\..\bin\Release\Aardvark.Base.pdb ==> lib\net45
-    ..\..\bin\Release\Aardvark.Base.xml ==> lib\net45
+include-pdbs true
